--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background: pink;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .assignment {
