--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: pink;
+    background: lightblue;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -7,7 +7,7 @@ body {
     display:flex;
     padding:10px;
     margin:10px;
-    background:lightgrey;
+    background: linen;
 }
 
 .assignment img {
@@ -16,6 +16,6 @@ body {
 }
 
 h1 {
-    color: darkorchid;
+    color: darkblue;
     text-align: center;
 }
