--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: lightblue;
+    background: lightble;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -7,15 +7,34 @@ body {
     display:flex;
     padding:10px;
     margin:10px;
-    background: linen;
+    background: #B0C4DE;
+    border-radius: 5px;
 }
 
 .assignment img {
     width:200px;
-    padding:10px;
+    margin: 10px;
+    border: 4px solid #FFFFF0;
+}
+
+.assignment img:hover {
+    border: 4px solid #C9E2EF;
 }
 
 h1 {
-    color: darkblue;
+    color: #001740;
     text-align: center;
+}
+
+h1:hover {
+    color: #C9E2EF;
+}
+
+a {
+    text-decoration:none;
+    color: #FFFFF0;
+}
+
+a:hover {
+    color: #C9E2EF;
 }
