--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 .assignment img {
     width:200px;
     margin: 10px;
-    border: 4px solid #FFFFF0;
+    border: 4px solid white;
 }
 
 .assignment img:hover {
@@ -32,7 +32,7 @@ h1:hover {
 
 a {
     text-decoration:none;
-    color: #FFFFF0;
+    color: white;
 }
 
 a:hover {
