--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,14 @@ body {
     padding:10px;
     margin:10px;
     padding:20px 10px;
-    background: #B0C4DE;
+    background: #2B6BD9;
     border-radius: 5px;
 }
 
 .assignment img {
     width:200px;
     margin: 10px;
-    border: 4px solid white;
+    border: 4px solid #0E3C8C;
     display:block;
     margin:auto;
 }
@@ -30,7 +30,7 @@ body {
 }
 
 h1 {
-    color: #001740;
+    color: #031940;
     text-align: center;
 }
 
@@ -44,7 +44,7 @@ h1:hover {
 
 a {
     text-decoration:none;
-    color: white;
+    color: #0E3C8C;
 }
 
 a:hover {
