--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     padding:10px;
     margin:10px;
     padding:20px 10px;
-    background: #2B6BD9;
+    background: #DFEDF6;
     border-radius: 5px;
 }
 
